[project]
name = "bulldozer-price-predictor"
version = "0.1.0"
description = "End-to-end machine learning system that predicts the sale price of bulldozers from their characteristics and past sales (a time-series regression problem)."
readme = "README.md"
requires-python = ">=3.10"
# Versions pinned to the era the notebooks target. scikit-learn >=1.5 is required
# for `root_mean_squared_log_error` and the pipeline/encoder APIs used in v2.
dependencies = [
    "numpy>=1.26,<2.1",
    "pandas>=2.1,<2.3",
    "matplotlib>=3.8,<3.10",
    "scikit-learn>=1.5,<1.6",
    "joblib>=1.3",
    "ipykernel",
]

# This is a notebook project, not an installable package — uv only manages the environment.
[tool.uv]
package = false
